ucs-school-umc-computerroom (5.0.10-1) unstable; urgency=medium

  * Bug #41752:
    - use deepcopy() instead of just plain copy() in LockableAttribute
    - emit signal "connected" if iTALC connection is really established

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 07 Jul 2016 18:14:46 +0200

ucs-school-umc-computerroom (5.0.9-1) unstable; urgency=medium

  * Bug #40777: fixed logic of menu item "switch on computer"

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 25 Feb 2016 14:19:50 +0100

ucs-school-umc-computerroom (5.0.8-3) unstable; urgency=medium

  * Stop, close and delete the computer connections before clearing the
    dict. That should save memory and network connections (Bug #36469)
    Pair-Programmed-With: Sönke Schwardt-Krummrich <schwardt@univention.de>

 -- Stefan Gohmann <gohmann@univention.de>  Thu, 06 Nov 2014 17:27:17 +0100

ucs-school-umc-computerroom (5.0.8-2) unstable; urgency=medium

  * Delete the old ItalcComputer objects in order to free the memory
    (Bug #36469)

 -- Stefan Gohmann <gohmann@univention.de>  Thu, 06 Nov 2014 07:41:26 +0100

ucs-school-umc-computerroom (5.0.8-1) unstable; urgency=low

  * Bug #35341: fix log message

 -- Florian Best <best@univention.de>  Thu, 21 Aug 2014 13:21:15 +0200

ucs-school-umc-computerroom (5.0.7-1) unstable; urgency=low

  * Bug #35341: remove all at jobs for the current room when changing settings

 -- Florian Best <best@univention.de>  Tue, 19 Aug 2014 08:38:02 +0200

ucs-school-umc-computerroom (5.0.6-1) unstable; urgency=low

  * Bug #34608: enhanced usability when changing state of multiple computers
  * Bug #34632: restart SMB connections after changing settings back to
  	defaults
  * Bug #35341: fix interferences when changing room settings between 2 or more computerrooms

 -- Florian Best <best@univention.de>  Mon, 18 Aug 2014 12:09:33 +0200

ucs-school-umc-computerroom (5.0.5-2) unstable; urgency=low

  * Bug #34949: Typo in German translation
